# platform.core.telephony.tel-plugin-dbus_tapi

./: CMakeLists.txt  README  tel-plugin-dbus_tapi.manifest
debian/: changelog  control  copyright  rules  tel-plugin-dbus-tapi.install.in
include/: common.h  dtapi_call.h  dtapi_gps.h  dtapi_main.h  dtapi_manager.h  dtapi_modem.h  dtapi_network.h  dtapi_phonebook.h  dtapi_sap.h  dtapi_sat.h  dtapi_sim.h  dtapi_sms.h  dtapi_ss.h  dtapi_util.h  modules.h  sat_mgr.h  tel_cs_conn.h  ts_common.h  ts_noti.h  ts_svr_req.h  ts_utility.h
introspection/: call.xml  convert_docbook_html.sh  convert_gtkdoc.sh  ex.xml  gen.sh  gps.xml  manager.xml  modem.xml  network.xml  oem.xml  phonebook.xml  sap.xml  sat.xml  sim.xml  sms.xml  ss.xml
packaging/: 0001-Support-sysconfdir-in-the-makefile.patch  0001-desc-dbus-create-interfaces-when-modem-is-added.patch  0002-sms-PDU-Trace-enhancement.patch  tel-plugin-dbus_tapi.changes  tel-plugin-dbus_tapi.spec  telephony.conf
res/: tapi.conf  tapi.conf.in
sat-manager/include/: sat_manager.h  sat_ui_support.h
sat-manager/src/: sat_manager.c  sat_ui_support.c
src/: call.c  cdmadata.c  cfg.c  common.c  common.h  desc-dbus.c  desc-dtapi.c  desc.c  dtapi_call.c  dtapi_common.c  dtapi_common.h  dtapi_gps.c  dtapi_main.c  dtapi_manager.c  dtapi_modem.c  dtapi_network.c  dtapi_oem.c  dtapi_phonebook.c  dtapi_sap.c  dtapi_sat.c  dtapi_sat_manager.c  dtapi_sat_manager.h  dtapi_sim.c  dtapi_sms.c  dtapi_ss.c  dtapi_util.c  gprs.c  gps.c  misc.c  modem.c  network.c  oem.c  omadm.c  phonebook.c  power.c  productivity.c  sap.c  sat.c  sat_manager.c  sat_manager.h  (+10 more)
src/legacy/: common.c  common.h  gps.c  modem.c  network.c  phonebook.c  sap.c  sat.c  sat_manager.c  sat_manager.h  sat_util.c  sim.c  sms.c  ss.c
src/legacy/sat_ui_support/: TelCall.h  TelDefines.h  TelErr.h  TelSat.h  TelSatEnvelope.h  TelSatObj.h  TelSatProactvCmd.h  TelSim.h  TelSs.h  sat_ui_support.c  sat_ui_support.h
src/sat_ui_support/: TelCall.h  TelDefines.h  TelErr.h  TelSat.h  TelSatEnvelope.h  TelSatObj.h  TelSatProactvCmd.h  TelSim.h  TelSs.h  sat_ui_support.c  sat_ui_support.h
test/: network-search.sh
